adds basic styling
Signed-off-by: CrugBarat <craigtbarratt@gmail.com>

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
+body {
+  display: block;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logo {
+  width: 200px;
+  margin-bottom: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.title {
+  font-family: 'Press Start 2P', cursive;
+  font-size: 45px;
+  margin: 0;
+  padding: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+select {
+  margin-top: 30px;
+  width: 400px;
+  font-size: 20px;
+  border: solid;
 }
 
-.App-link {
-  color: #61dafb;
+.details-title {
+  margin-top: 40px;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 22px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p {
+  font-size: 20px;
+}
+
+span {
+  font-weight: 700;
 }
